--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Most Awesome Radical Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+    
+    <header class="hero-box">
+        <section class="hero-img-box">
+            <img class="hero-img" src="image/Phrenic Phone Case.png"alt="Cool as hell">
+        </section>
+    </header>
+
     <h1>Perry on Perry's Birthday</h1>
     <p>Hello kids</p>
-</body>
+    <p class="mycolor">I'm really tired</p>
+    <p class="mycolortwo">I'm still tired bruh</p>
+ </body>
+ 
 </html>
