--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Most Awesome Radical Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
-    
+  <body>
     <header class="hero-box">
-        <section class="hero-img-box">
-            <img class="hero-img" src="image/Phrenic Phone Case.png"alt="Cool as hell">
-        </section>
+      <section class="hero-image-box">
+        <img
+          class="hero-image"
+          src="image/Phrenic Phone Case.png"
+          alt="Cool as hell"
+        />
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">I'm really tired</h1>
+        <p class="mhero-text">I'm still tired bruh</p>
+      </section>
     </header>
-
-    <h1>Perry on Perry's Birthday</h1>
-    <p>Hello kids</p>
-    <p class="mycolor">I'm really tired</p>
-    <p class="mycolortwo">I'm still tired bruh</p>
- </body>
- 
+  </body>
 </html>
