--- a/index.html
+++ b/index.html
@@ -22,5 +22,47 @@
         <p class="mhero-text">I'm still tired bruh</p>
       </section>
     </header>
+    <!-- Begin Portfolio Gallery-->
+    <section class="portfolio-gallery">
+      <h1>Portfolio</h1>
+      <div class="gallery-item">
+        <a class="glightbox" href="image/IMG_0273.PNG">
+          <img class="gallery-img" src="image/IMG_0273.PNG" alt="flipside"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="image/IMG_0278.PNG">
+          <img class="gallery-img" src="image/IMG_0278.PNG" alt="flipside 2"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="image/IMG_0282.PNG">
+          <img class="gallery-img" src="image/IMG_0282.PNG" alt="flipside 3"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="image/IMG_0310.PNG">
+          <img class="gallery-img" src="image/IMG_0310.PNG" alt="something"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="video/My Wallpaper Gif 2 new finished.mp4">
+          <img
+            class="gallery-img"
+            src="video/My Wallpaper Gif 2 new finished.mp4"
+            alt="gif"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="">
+          <img class="gallery-img" src="" alt=""
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="">
+          <img class="gallery-img" src="" alt=""
+        /></a>
+      </div>
+    </section>
   </body>
 </html>
