added foundation images

--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <title>My Most Awesome Radical Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
   </head>
 
   <body>
     <header class="hero-box">
       <section class="hero-image-box">
-        <img
+        <!--<img
           class="hero-image"
           src="image/Phrenic Phone Case.png"
           alt="Cool as hell"
-        />
+        />-->
+        <video
+          src="video/My Wallpaper Gif 2 new finished.mp4"
+          class="hero-video"
+          autoplay
+          muted
+          loop
+        ></video>
       </section>
       <section class="hero-text-box">
         <h1 class="hero-heading">I'm really tired</h1>
@@ -85,6 +93,104 @@
             <img class="gallery-img" src="" alt=""
           /></a>
         </div>
+      </section>
+      <h1>Foundation Portfolio</h1>
+      <section class="portfolio gallery">
+        <div class="gallery-item">
+          <a class="glightbox" href="image/2D Design 1 .jpg">
+            <img
+              class="gallery-img"
+              src="image/2D Design 1 .jpg"
+              alt="2D Design 1"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/2D Design 2.jpg">
+            <img
+              class="gallery-img"
+              src="image/2D Design 2.jpg"
+              alt="2D Design 2"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/Observational Drawing.jpg">
+            <img
+              class="gallery-img"
+              src="image/Observational Drawing.jpg"
+              alt="Observational Drawing"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/Oil Painting.jpg">
+            <img
+              class="gallery-img"
+              src="image/Oil Painting.jpg"
+              alt="Oil Painting"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/Printmaking.jpg">
+            <img
+              class="gallery-img"
+              src="image/Printmaking.jpg"
+              alt="Printmaking"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/Pumpkin Drawing.jpg">
+            <img
+              class="gallery-img"
+              src="image/Pumpkin Drawing.jpg"
+              alt="Pumpkin Drawing"
+          /></a>
+        </div>
+        <div class="gallery-item">
+          <a class="glightbox" href="image/Toast Toaster.jpg">
+            <img
+              class="gallery-img"
+              src="image/Toast Toaster.jpg"
+              alt="Toast Toaster"
+          /></a>
+        </div>
+      </section>
+    </section>
+    <!-- Begin about Section-->
+    <section class="about-container">
+      <section class="about-text">
+        <h1>Perry likes food</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis
+          commodi est ratione delectus expedita cum aut, corrupti quo.
+          Accusamus, architecto adipisci asperiores doloribus vitae id!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam
+          blanditiis facere iusto architecto doloribus, quis sed consequuntur?
+        </p>
+        <p>
+          <a href="mailto:pccovington@student.cia.edu">Email Perry</a> at
+          pccovington@student.cia.edu
+        </p>
+        <section class="about-social">
+          <a
+            href="https://instagram.com/platymations_yt"
+            aria-label="Link to Instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/channel/UCCIagkKmv-EVANsfVTW8S0Q"
+            aria-label="Link to Youtube"
+          >
+            <i class="fab fa-youtube" aria-hidden="true"></i>
+          </a>
+        </section>
+      </section>
+      <section class="about-image">
+        <img
+          src="image/Phrenic Phone Case(Transparent).png"
+          alt="Profile pic of Joe"
+        />
       </section>
     </section>
     <script src="js/glightbox.min.js"></script>
