--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
   </head>
 
   <body>
+    <!--Begin navigation-->
+    <nav class="nav-bar top-nav" id="top-nav-bar">
+      <h1 class="logo"><a href="index.html">Perry Covington</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item social-nav-item">
+          <a
+            href="https://www.youtube.com/channel/UCCIagkKmv-EVANsfVTW8S0Q"
+            aria-label="Link to YouTube"
+            ><i class="fab fa-youtube" aria-hidden="true"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+    <!--End Navigation-->
     <header class="hero-box">
       <section class="hero-image-box">
         <!--<img
@@ -32,7 +48,7 @@
       </section>
     </header>
     <!-- Begin Portfolio Gallery-->
-    <section class="portfolio-container">
+    <section class="portfolio-container section-scroll" id="portfolio">
       <h1>Portfolio</h1>
       <section class="portfolio-gallery">
         <div class="gallery-item">
@@ -155,7 +171,7 @@
       </section>
     </section>
     <!-- Begin about Section-->
-    <section class="about-container">
+    <section class="about-container section-scroll" id="about">
       <section class="about-text">
         <h1>Perry likes food</h1>
         <p>
@@ -196,6 +212,21 @@
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
+
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          document.getElementById("top-nav-bar").style.background = "#000000";
+        } else {
+          document.getElementById("top-nav-bar").style.background = "#none";
+        }
+      }
     </script>
   </body>
 </html>
